--- a/vmafd/tools/cli/win/vmafd-cli.vcproj
+++ b/vmafd/tools/cli/win/vmafd-cli.vcproj
@@ -57,7 +57,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="advapi32.lib ws2_32.lib user32.lib Gdi32.lib libcommon.lib libvmdirclient.lib libvmafdclient.lib dcelib.lib pthreadVC2.lib libvmafcfgapi.lib libvmafcfgwin.lib"
+				AdditionalDependencies="advapi32.lib ws2_32.lib user32.lib Gdi32.lib Psapi.lib libcommon.lib libvmdirclient.lib libvmafdclient.lib dcelib.lib pthreadVC2.lib libvmafcfgapi.lib libvmafcfgwin.lib"
 				AdditionalLibraryDirectories="&quot;$(SolutionDir)$(IntDir)&quot;;&quot;$(LIGHTWAVE_PLATFORM_SDK_ROOT)\$(ConfigurationName)\lib&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Lib\x64&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Lib\amd64&quot;"
 				GenerateDebugInformation="true"
 				TargetMachine="17"
@@ -125,7 +125,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="advapi32.lib ws2_32.lib user32.lib Gdi32.lib libcommon.lib dcelib.lib pthreadVC2.lib libvmdirclient.lib libvmafdclient.lib libvmafcfgapi.lib libvmafcfgwin.lib"
+				AdditionalDependencies="advapi32.lib ws2_32.lib user32.lib Gdi32.lib Psapi.lib libcommon.lib dcelib.lib pthreadVC2.lib libvmdirclient.lib libvmafdclient.lib libvmafcfgapi.lib libvmafcfgwin.lib"
 				AdditionalLibraryDirectories="&quot;$(SolutionDir)$(IntDir)&quot;;&quot;$(LIGHTWAVE_PLATFORM_SDK_ROOT)\$(ConfigurationName)\lib&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Lib\x64&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Lib\amd64&quot;"
 				GenerateDebugInformation="true"
 				TargetMachine="17"
