--- a/vmafd/tools/dir-cli/win/dir-cli.vcproj
+++ b/vmafd/tools/dir-cli/win/dir-cli.vcproj
@@ -58,7 +58,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="advapi32.lib ws2_32.lib user32.lib libldap_r.lib liblber.lib Gdi32.lib libcommon.lib libvmdirclient.lib libvmafdclient.lib dcelib.lib pthreadVC2.lib libvmafcfgapi.lib libvmafcfgwin.lib"
+				AdditionalDependencies="advapi32.lib ws2_32.lib user32.lib Psapi.lib libldap_r.lib liblber.lib Gdi32.lib libcommon.lib libvmdirclient.lib libvmafdclient.lib dcelib.lib pthreadVC2.lib libvmafcfgapi.lib libvmafcfgwin.lib"
 				AdditionalLibraryDirectories="&quot;$(LIGHTWAVE_VMDIR_ROOT)\lib64\$(ConfigurationName)&quot;;&quot;$(SolutionDir)$(IntDir)&quot;;&quot;$(LIGHTWAVE_PLATFORM_SDK_ROOT)\$(ConfigurationName)\lib&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Lib\x64&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Lib\amd64&quot;"
 				GenerateDebugInformation="true"
 				TargetMachine="17"
@@ -126,7 +126,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="advapi32.lib ws2_32.lib user32.lib libldap_r.lib liblber.lib Gdi32.lib libcommon.lib dcelib.lib pthreadVC2.lib libvmdirclient.lib libvmafdclient.lib libvmafcfgapi.lib libvmafcfgwin.lib"
+				AdditionalDependencies="advapi32.lib ws2_32.lib user32.lib Psapi.lib libldap_r.lib liblber.lib Gdi32.lib libcommon.lib dcelib.lib pthreadVC2.lib libvmdirclient.lib libvmafdclient.lib libvmafcfgapi.lib libvmafcfgwin.lib"
 				AdditionalLibraryDirectories="&quot;$(LIGHTWAVE_VMDIR_ROOT)\lib64\$(ConfigurationName)&quot;;&quot;$(SolutionDir)$(IntDir)&quot;;&quot;$(LIGHTWAVE_PLATFORM_SDK_ROOT)\$(ConfigurationName)\lib&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\Lib\x64&quot;;&quot;$(LIGHTWAVE_WINDOWS_SDK_ROOT)\VC\Lib\amd64&quot;"
 				GenerateDebugInformation="true"
 				TargetMachine="17"
