--- a/vmidentity/pom.xml
+++ b/vmidentity/pom.xml
@@ -47,6 +47,7 @@
     <javax.ws.version>2.0.1</javax.ws.version>
     <javax.validation.version>1.1.0.Final</javax.validation.version>
 
+    <args4j.version>2.33</args4j.version>
     <opensaml.version>2.5.3</opensaml.version>
     <openws.version>1.4.4</openws.version>
     <tomcat.catalina.version>7.0.40</tomcat.catalina.version>
