Fix for Bug 1813933 - DFL value getting replicated from upgraded nodes to non upgraded nodes in a topology Bumped PSC version from 6.6.3 to 6.7.0. Updated DFL table with appropriate max dfl for version.
Change-Id: Ibb82bd47396ad47bf99491f16a25a116dd4dcb18

--- a/support/docker/Dockerfile
+++ b/support/docker/Dockerfile
@@ -26,7 +26,8 @@ RUN tdnf update --refresh -y \
         openjre-1.8.0.102 \
         procps-ng-3.3.11 \
         sed-4.2.2 \
-        vmware-lightwave-server-6.6.3 && \
+        jansson-2.9 \
+        vmware-lightwave-server-6.7.0 && \
     rpm -e --nodeps systemd && \
     mkdir -p /var/run/sshd && \
     chmod -rx /var/run/sshd && \
