Revert "vmdir rest head implementation (excluded from build)"
This reverts commit c042a5889f002518cc901066b8408932d13a0f24.

Change-Id: I3b172d61294ad2969a51c36951d789e409cc4f4a

--- a/vmdir/config/Makefile.am
+++ b/vmdir/config/Makefile.am
@@ -3,7 +3,6 @@ vmdirconf_DATA = \
     vmdir.reg        \
     vmdir-client.reg \
     vmdird-syslog-ng.conf \
-    saslvmdird.conf \
-    vmdir-rest.json
+    saslvmdird.conf
 
 bin_SCRIPTS = vmdir_upgrade.sh
