Fix paths/function exports for vmafd Windows
Change-Id: Ic6e3fcb30bb4b6b58c676b53a5ec57a693b9b71a

--- a/vmafd/interop/cdcjni/win/makefile.x64
+++ b/vmafd/interop/cdcjni/win/makefile.x64
@@ -5,7 +5,7 @@ JDK_BASE = $(LIGHTWAVE_JDK_ROOT:/=\)
 
 JAVAH = $(JDK_BASE)\bin\javah.exe
 CLASSNAME = com.vmware.identity.cdc.CdcAdapter
-JARDIR=..\..\..\..\build\authentication-framework\packages\client-domain-controller-cache.jar
+JARDIR=..\..\..\build\authentication-framework\packages\client-domain-controller-cache.jar
 
 
 all: cdcjni.h
