Add openssl header path
Change-Id: Ia458a902bdef8e84b68652bf53b91aa066518165

--- a/vmdir/testing/unittests/libcommon/Makefile.am
+++ b/vmdir/testing/unittests/libcommon/Makefile.am
@@ -3,6 +3,7 @@ lib_LTLIBRARIES = libcommonunittests.la
 libcommonunittests_la_CPPFLAGS = \
     -I$(top_srcdir)/include \
     -I$(top_srcdir)/include/public \
+    @OPENSSL_INCLUDES@ \
     @LW_INCLUDES@
 
 libcommonunittests_la_SOURCES = \
