This change provides for packaging of lightwave raft server and client rpms into one meta rpm complete with its dependencies. The meta rpm thus generated from spec in lw-lwraft folder will enable installation of lightwave-client with lightwave raft on a single node/vm.
Change-Id: Iff8b6f8d4d69743400a262ad5ae241d0aec8b99b

--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,8 @@ tools/win/wininstaller/wininstaller.v12.suo
 */build/libtool
 */build/Makefile
 stage/*
+*~
+*/lw-lwraft/rpmbuild/*
+lw-raft/rpmbuild/*
+vmidentity/rest/core/server/${sys:vmware.log.dir}
+vmidentity/service/target/
