--- a/lwraft/tools/Makefile.am
+++ b/lwraft/tools/Makefile.am
@@ -1,16 +1,5 @@
 SUBDIRS = \
     test \
-    vdcaclmgr \
-    vdcadmintool \
     lwraftpromo \
-    vdcpass \
-    vdcrepadmin \
-    vdcsetupldu \
-    vdcbackup \
-    vmkdc_admin \
-    vdcsrp \
-    vdcupgrade \
-    vdcleavefed \
-    vdcresetMachineActCred \
-    vdcmetric \
-    vdcschema
+    vdcadmintool \
+    vdcleavefed
