vmca: Add back OpenSSL include path
Change-Id: I460dc30665291911bf12f0b39516695aae4a4aad

--- a/vmca/service/Makefile.am
+++ b/vmca/service/Makefile.am
@@ -27,6 +27,7 @@ vmcad_CPPFLAGS =                    \
     @DCERPC_INCLUDES@               \
     @LW_INCLUDES@                   \
     @POPT_INCLUDES@                 \
+    @OPENSSL_INCLUDES@              \
     @VMAFD_INCLUDES@
 
 vmcad_LDADD = \
