Address vmdir schema upgrade edge case - apply labeledURI matching rule change to dn index
Change-Id: Ib942465a86147b1e07f86609ce22aa57a8e2cec3

--- a/vmdir/server/mdb-store/Makefile.am
+++ b/vmdir/server/mdb-store/Makefile.am
@@ -22,6 +22,7 @@ libmdb_store_la_SOURCES = \
     indexwriteutil.c \
     init.c \
     iterate.c \
+    legacy.c \
     txn.c
 
 libmdb_store_la_CPPFLAGS = \
