--- a/vmdir/server/mdb-store/win/libmdb-store.vcproj
+++ b/vmdir/server/mdb-store/win/libmdb-store.vcproj
@@ -201,6 +201,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\legacy.c"
+				>
+			</File>
+			<File
 				RelativePath="..\txn.c"
 				>
 			</File>
