Add vmafd rpath flags to libraries that require them
Change-Id: I44865e71c5738f6d244dfb2a935c98b99cdf941a

--- a/vmca/python/Makefile.am
+++ b/vmca/python/Makefile.am
@@ -37,6 +37,7 @@ vmca_la_LIBADD = \
     
  
 vmca_la_LDFLAGS = \
+    @VMAFD_LDFLAGS@ \
     @OPENSSL_LDFLAGS@ \
     @LW_LDFLAGS@  \
     @PYTHON_LDFLAGS@ \
