Porting VmDir REST head implementation to RAFT
Change-Id: I6bcf2273bb98355adcd4572b80451b931e747261

--- a/lwraft/config/Makefile.am
+++ b/lwraft/config/Makefile.am
@@ -3,6 +3,7 @@ lwraftconf_DATA = \
     lwraft.reg        \
     lwraft-client.reg \
     lwraftd-syslog-ng.conf \
-    sasllwraftd.conf
+    sasllwraftd.conf \
+    lwraft-rest.json
 
 bin_SCRIPTS = lwraft_upgrade.sh
