Fix for Bug 1828537. Set vmdir tools logging to /var/log/lightwave Allow the logging directory to be configurable in Makefile.bootstrap
Change-Id: If4dda811735a171f550f4b0ece234f2979ba6c4a

--- a/vmdir/configure.ac
+++ b/vmdir/configure.ac
@@ -601,6 +601,11 @@ vmdirsasldir=$vmdirlibdir/sasl2
 AC_SUBST(vmdirsasldir)
 
 vmdirlogdir=/var/log/vmware/vmdir/
+AC_ARG_WITH([logdir],
+   [AC_HELP_STRING([--with-logdir], [set the logging directory for vmdir])],
+   [
+        vmdirlogdir="$withval"
+   ])
 AC_SUBST(vmdirlogdir)
 AS_AC_EXPAND(VMDIR_LOG_DIR, $vmdirlogdir)
 AC_DEFINE_UNQUOTED(VMDIR_LOG_DIR, "$VMDIR_LOG_DIR", [Log directory])
