PR 1751488: allow joining computer into non-default OU
Change-Id: Ic96af8838c3e3cefdf9f6b658eee2d2c7f55411c

--- a/vmdir/common/Makefile.am
+++ b/vmdir/common/Makefile.am
@@ -15,6 +15,7 @@ libcommon_la_SOURCES = \
     krbmisc.c \
     krbutil.c \
     ldapbind.c \
+    ldaputil.c \
     linkedlist.c \
     logging.c \
     marshalutil.c \
