--- a/vmidentity/ssoclients/common/include/public/Makefile.am
+++ b/vmidentity/ssoclients/common/include/public/Makefile.am
@@ -1,2 +1,3 @@
 ssoclientsincludedir=$(includedir)
-ssoclientsinclude_HEADERS=ssoerrors.h
+ssoclientsinclude_HEADERS=ssoerrors.h \
+                          ssotypes.h
