--- a/vmdir/common/win/libcommon.vcxproj
+++ b/vmdir/common/win/libcommon.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="..\krbmisc.c" />
     <ClCompile Include="..\krbutil.c" />
     <ClCompile Include="..\ldapbind.c" />
+    <ClCompile Include="..\ldaputil.c" />
     <ClCompile Include="..\linkedlist.c" />
     <ClCompile Include="..\marshalutil.c" />
     <ClCompile Include="..\memory.c" />
